[gd_scene load_steps=6 format=2]

[ext_resource path="res://DEV_TESTE/TESTE_teste.gd" type="Script" id=1]
[ext_resource path="res://prefebs/enemies/move_enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://grafica/Shopping/navs/Normal.png" type="Texture" id=3]
[ext_resource path="res://prefebs/Nave.tscn" type="PackedScene" id=4]
[ext_resource path="res://prefebs/enemies/hard_enemy.tscn" type="PackedScene" id=5]

[node name="Node" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = 2.0
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
anchor_left = 0.813889
anchor_top = 0.181409
anchor_right = 0.9
anchor_bottom = 0.211394
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button2" type="Button" parent="."]
anchor_left = 0.280556
anchor_top = 0.17991
anchor_right = 0.366667
anchor_bottom = 0.209895
margin_top = -6.10352e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect3" type="TextureRect" parent="."]
anchor_left = 0.275
anchor_top = 0.2991
anchor_right = 0.709722
anchor_bottom = 0.586207
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Move_enemy_controler" parent="." instance=ExtResource( 2 )]
position = Vector2( 146, 86 )
scale = Vector2( 0.7, 0.7 )

[node name="Nave" parent="." instance=ExtResource( 4 )]

[node name="Move_enemy_controler2" parent="." instance=ExtResource( 5 )]
position = Vector2( 123, 487 )

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
